# jncurses

./: .classpath  .gitignore  .project  AUTHOR  Changelog  INSTALL  Makefile.am  Makefile.in  README  TODO  VERSION  apt.yaml  bootstrap  configure  configure.ac  get_tools.sh  jncurses.i
config/: deps.py
scripts/: ubuntu_install.py
src/jncursesTest/: Test.java
templardefs/: deps.py
test/: Makefile  test  test.cc
